syntax = "proto3";

package io.provenance.scope.contract;

option java_package = "io.provenance.scope.contract.proto";
option java_outer_classname = "Contractsasdf";

import "google/protobuf/timestamp.proto";

import "io/provenance/scope/contract/common.proto";
import "io/provenance/scope/contract/specification.proto";
import "io/provenance/scope/contract/public_key.proto";
import "io/provenance/scope/contract/util.proto";

message Contract {
    reserved "type";
    reserved 10;

    io.provenance.scope.contract.DefinitionSpec definition = 1;

    // Points to the proto for the contractSpec
    Record spec = 2;

    SigningAndEncryptionPublicKeys invoker = 3;

    // Constructor arguments.
    // These are always the output of a previously recorded consideration.
    repeated Record inputs = 4;

    repeated ConditionProto conditions = 5;
    repeated ConsiderationProto considerations = 6;

    repeated Recital recitals = 7;

    int32 times_executed = 8;

    // This is only set once when the contract is initially executed
    google.protobuf.Timestamp start_time = 9;
}

message ContractState {
    UUID executionUuid = 1;
}

message Recital {
    PartyType signer_role = 1;
    SigningAndEncryptionPublicKeys signer = 2;
    bytes address = 3;
}

message Record {
    string name = 1;
    Location data_location = 2;
}

message ConditionProto {
    string condition_name = 1;
    ExecutionResult result = 2;
}

message ConsiderationProto {
    string consideration_name = 1;

    // Data pushed to a consideration that will ultimately match the output_spec of the consideration
    repeated ProposedRecord inputs = 2;

    ExecutionResult result = 3;
}

// Input to a consideration defined at runtime, and emitted as a proposed fact for inclusion on the blockchain.
message ProposedRecord {
    string name = 1;
    string hash = 2;
    string classname = 3;
    // TODO do we need this?
    ProvenanceReference ancestor = 4;
}

message ValidationError {
    repeated string errors = 1;
    Result result = 2;

    enum Result {
        UNKNOWN = 0;
        PASS = 1;
        FAIL = 2;
    }
}

message ExecutionResult {
    ProposedRecord output = 1;

    Result result = 2;
    enum Result {
        UNKNOWN = 0;
        PASS = 1;
        SKIP = 2; // Couldn't process the condition/consideration due to missing facts being generated by other considerations.
        FAIL = 3;
    }

    google.protobuf.Timestamp recorded_at = 3;
    string error_message = 4;
}
